# iphone-alarms-sync

./: .cursorrules  .gitignore  .gitmoji-changelogrc  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  HACS_CHECKLIST.md  README.md  commitlint.config.js  hacs.json  package-lock.json  package.json  pyproject.toml
.cursor/commands/: check-code.md
.cursor/plans/: iphone_alarms_sync_integration_df83d62c.plan.md
.cursor/rules/: code-quality-guidelines.mdc  code-quality-verification.mdc  commit-message.mdc
.github/: FUNDING.yml
.github/workflows/: hacs.yml  release.yml  validate.yml
.husky/: commit-msg  pre-commit
custom_components/iphone_alarms_sync/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_trigger.py  manifest.json  number.py  qr_code.py  sensor.py  services.yaml  strings.json  time.py  utils.py
custom_components/iphone_alarms_sync/translations/: en.json
docs/: shortcuts.md  testing-release.md
shortcuts/: README.md  Sync Alarms With HA.shortcut
templates/: commit.hbs  release-notes.hbs
